Actualizacion de img
Añado comentarios a las imagenes y hago algunas correcciones

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
         El mapache es un mamífero omnívoro nativo de América del Norte. Se
         reconoce fácilmente por su máscara facial negra y su cola anillada.
       </p>
-      <img src="dos mapaches.jpg" alt="Mapache" />
+      <figure>
+        <img src="dos_mapaches.jpg" alt="Dos mapaches">
+        <figcaption>Dos mapaches curiosos.</figcaption>
+      </figure>
     </section>
 
     <section id="caracteristicas">
@@ -54,10 +57,10 @@
           problemas.
         </li>
       </ul>
-      <img
-        src="mapache saliendo del cubo.jpg"
-        alt="Mapache manipulando objetos"
-      />
+     <figure>
+      <img src="mapache_saliendo_del_cubo.jpg" alt="Mapache manipulando onjetos">
+      <figcaption>Maache saliendo de un cubo de basura.</figcaption>
+     </figure>
     </section>
 
     <section id="tipos">
@@ -72,7 +75,10 @@
         <li>Mapache de Isla de Cozumel (Procyon pygmaeus)</li>
         <li>Mapache de Oso (Procyon lotor hirsutus)</li>
       </ul>
-      <img src="clymene.jpg" alt="Mapache de Clymene" />
+<figure>
+  <img src="procyon_pygmaeus.jpg" alt="Mapache de Cozumel">
+  <figcaption>Mapache de Cozumel."En peligro de extinión".</figcaption>
+</figure>
     </section>
 
     <section id="curiosidades">
@@ -104,26 +110,38 @@
           Símbolo de astucia y habilidad.
         </li>
       </ul>
-      <img src="rocket racoon.jpg" alt="Rocky Raccoon" />
+      <figure>
+        <img src="rocket_racoon.jpg" alt="Rocket Racoon">
+        <figcaption>Racoon, u personaje popular de ficción de la cultura popular.</figcaption>
+      </figure>
     </section>
 
     <section id="galeria">
       <h2>Galería</h2>
-      <img src="mapache en el bosque.jpg" alt="Mapache en el bosque" />
-      <img src="racon come.jpg" alt="Mapache comiendo" />
-      <img src="mapache en agua.jpg" alt="Mapache en el agua" />
+<figure>
+  <img src="mapache_en_el_bosque.jpg" alt="Mapache en el bosque">
+  <figcaption>Mapache en su hábitat natural.</figcaption>
+</figure>
+<figure>
+  <img src="racoon_come.jpg" alt="Mapache comiendo">
+  <figcaption>Mapche disfrutando de una calabaza.</figcaption>
+</figure>
+<figure>
+  <img src="mapache_en_agua.jpg" alt="Mapache en el agua">
+  <figcaption>Mapache y hurón nadando.</figure>
+</figure>
     </section>
 
     <section id="mapa">
       <h2>Mapa de Distribución</h2>
       <p>
         El mapache es nativo de América del Norte, desde el sur de Canadá hasta
-        el norte de Costa Rica.
+        el norte de Costa Rica. Tambien se encuentran ejemplares en el centro de Europa y Japón.
       </p>
-      <img
-        src="Potential-distribution-map-of-the-raccoon-continuous-and-categorical-map.png"
-        alt="Mapa de Distribución del Mapache"
-      />
+     <figure>
+      <img src="Potential-distribution-map-of-the-raccoon-continuous-and-categorical-map.png" alt="Mapa de Distribución del mapache">
+      <figcaption>Distribución geográfica del mapache.</figcaption>
+     </figure>
     </section>
 
     <section id="enlaces">
