--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         </li>
       </ul>
      <figure>
-      <img src="mapache_saliendo_del_cubo.jpg" alt="Mapache manipulando onjetos">
-      <figcaption>Maache saliendo de un cubo de basura.</figcaption>
+      <img src="mapache_saliendo_del_cubo.jpg" alt="Mapache manipulando objetos">
+      <figcaption>Mapache saliendo de un cubo de basura.</figcaption>
      </figure>
     </section>
 
@@ -124,7 +124,7 @@
 </figure>
 <figure>
   <img src="racoon_come.jpg" alt="Mapache comiendo">
-  <figcaption>Mapche disfrutando de una calabaza.</figcaption>
+  <figcaption>Mapaches disfrutando de una calabaza.</figcaption>
 </figure>
 <figure>
   <img src="mapache_en_agua.jpg" alt="Mapache en el agua">
@@ -160,12 +160,12 @@
 
     <section id="contacto">
       <h2>Contacto</h2>
+      <p>Si tiene alguna duda o comenario, no dude en ponerse en contacto con nostros:</p>
       <form action="#" method="post">
         <label for="email">Correo Electrónico:</label><br />
         <input type="email" id="email" name="email" required /><br /><br />
         <label for="message">Mensaje:</label><br />
-        <textarea id="message" name="message" rows="4" required></textarea
-        ><br /><br />
+        <textarea id="message" name="message" rows="4" required></textarea ><br /><br />
         <input type="submit" value="Enviar" />
       </form>
     </section>
