Cambio de tamaño
Modifico el tamaño de las imágenes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         reconoce fácilmente por su máscara facial negra y su cola anillada.
       </p>
       <figure>
-        <img src="dos_mapaches.jpg" alt="Dos mapaches">
+        <img src="dos_mapaches.jpg" alt="Dos mapaches" width="300" height="200">
         <figcaption>Dos mapaches curiosos.</figcaption>
       </figure>
     </section>
@@ -58,7 +58,7 @@
         </li>
       </ul>
      <figure>
-      <img src="mapache_saliendo_del_cubo.jpg" alt="Mapache manipulando objetos">
+      <img src="mapache_saliendo_del_cubo.jpg" alt="Mapache manipulando objetos" width="300" height="200">
       <figcaption>Mapache saliendo de un cubo de basura.</figcaption>
      </figure>
     </section>
@@ -76,7 +76,7 @@
         <li>Mapache de Oso (Procyon lotor hirsutus)</li>
       </ul>
 <figure>
-  <img src="procyon_pygmaeus.jpg" alt="Mapache de Cozumel">
+  <img src="procyon_pygmaeus.jpg" alt="Mapache de Cozumel" width="300" height="200">
   <figcaption>Mapache de Cozumel."En peligro de extinión".</figcaption>
 </figure>
     </section>
@@ -111,7 +111,7 @@
         </li>
       </ul>
       <figure>
-        <img src="rocket_racoon.jpg" alt="Rocket Racoon">
+        <img src="rocket_racoon.jpg" alt="Rocket Racoon" width="300" height="200">
         <figcaption>Racoon, u personaje popular de ficción de la cultura popular.</figcaption>
       </figure>
     </section>
@@ -119,15 +119,15 @@
     <section id="galeria">
       <h2>Galería</h2>
 <figure>
-  <img src="mapache_en_el_bosque.jpg" alt="Mapache en el bosque">
+  <img src="mapache_en_el_bosque.jpg" alt="Mapache en el bosque" width="300" height="200">
   <figcaption>Mapache en su hábitat natural.</figcaption>
 </figure>
 <figure>
-  <img src="racoon_come.jpg" alt="Mapache comiendo">
+  <img src="racoon_come.jpg" alt="Mapache comiendo" width="300" height="200">
   <figcaption>Mapaches disfrutando de una calabaza.</figcaption>
 </figure>
 <figure>
-  <img src="mapache_en_agua.jpg" alt="Mapache en el agua">
+  <img src="mapache_en_agua.jpg" alt="Mapache en el agua" width="300" height="200">
   <figcaption>Mapache y hurón nadando.</figure>
 </figure>
     </section>
@@ -139,7 +139,7 @@
         el norte de Costa Rica. Tambien se encuentran ejemplares en el centro de Europa y Japón.
       </p>
      <figure>
-      <img src="Potential-distribution-map-of-the-raccoon-continuous-and-categorical-map.png" alt="Mapa de Distribución del mapache">
+      <img src="Potential-distribution-map-of-the-raccoon-continuous-and-categorical-map.png" alt="Mapa de Distribución del mapache" width="300" height="200">
       <figcaption>Distribución geográfica del mapache.</figcaption>
      </figure>
     </section>
