--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </ul>
 <figure>
   <img src="procyon_pygmaeus.jpg" alt="Mapache de Cozumel" width="300" height="200">
-  <figcaption>Mapache de Cozumel."En peligro de extinión".</figcaption>
+  <figcaption>Mapache de Cozumel.<q>En peligro de extinción</q>.</figcaption>
 </figure>
     </section>
 
@@ -96,8 +96,8 @@
       <h2>Leyendas y Personajes Famosos</h2>
       <ul>
         <li>
-          <strong>Rascal:</strong> Personaje en el libro “Rascal” de Sterling
-          North.
+          <strong>Rascal:</strong> Personaje en el libro <q>Rascal</q> de <cite>Sterling
+            North</cite>.
         </li>
         <li>
           <strong>Rocky Raccoon:</strong> Personaje en la canción de los
@@ -112,7 +112,7 @@
       </ul>
       <figure>
         <img src="rocket_racoon.jpg" alt="Rocket Racoon" width="300" height="200">
-        <figcaption>Racoon, u personaje popular de ficción de la cultura popular.</figcaption>
+        <figcaption><cite>Rocket</cite>, un personaje popular de ficción de la cultura popular.</figcaption>
       </figure>
     </section>
 
